# door2door-assignment

./: .gitignore  Analysis.ipynb  Procfile  README.md  README.rst  Untitled.ipynb  dev-requirements.txt  map.html  requirements.txt  setup.cfg  setup.py
d2d/: __init__.py  __main__.py  app.py  model.py  path.py  schemas.py  view.py  wsgi.py
d2d/static/css/: map.css
d2d/static/js/: map.js
d2d/templates/: map.pt
d2d/tests/: test_app.py  test_view.py
