[tool:pytest]
testpaths = d2d


[metadata]
name = d2d
author = inytar
summary = Discover busstops in Dar es Salaam
description-file = README.rst
home-page = https://launchpad.net/pbr
license = Apache-2
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Intended Audience :: Developers
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: WSGI
    Programming Language :: Python :: 3.5
[entry_points]
console_scripts =
    run-app = d2d.__main__:run
