[tool:pytest]
testpaths = d2d


[metadata]
name = d2d
author = inytar
summary = Discover busstops in Dar es Salaam
description-file = README.md
license = Apache-2
classifier =
    Programming Language :: Python
    Intended Audience :: Developers
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: WSGI
    Programming Language :: Python :: 3.5
[entry_points]
console_scripts =
    run-app = d2d.__main__:run
